fixed contrast issues

--- a/style.css
+++ b/style.css
@@ -17,13 +17,7 @@ header, footer {
   border-color: #0292af;
 }
 
-footer>p {
-  font-size: 1em;
-  font-weight: bold;
-  color: #000;
-}
-
-h1, h2, h3, h4, footer>p {
+h1, h2, h3, h4 {
   /* adjust font & alignment of headers */
   text-align: center;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
@@ -67,13 +61,11 @@ img {
 
 .project-title {
   display: flex;
-  align-items: center;
   align-items: flex-end;
 }
 
 .project-title-header {
   flex-basis: 75%;
-  margin-bottom: 0;
 }
 
 .zero-bottom-margin {
@@ -97,11 +89,11 @@ img {
 }
 
 a:link {
-  color: rgb(44, 23, 23);
+  color: rgb(05, 05, 05);
 }
 
 a:visited {
-  color: rgb(175, 23, 23);
+  color: rgb(250, 148, 148);
 }
 
 a:hover {
